--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -231,24 +231,24 @@
       ldjson: yes
       answer: |
         ### Одобрены  для программ Test and Go / «Песочница»
-               1. CoronaVac (Sinovac) - 2 doses
-               2. AstraZeneca / Covishield - 2 doses
-               3. Pfizer BioNTech - 2 doses
-               4. Janssen (Johnson&Johnson)
-               5. Moderna - 2 doses
-               6. COVILO (Sinopharm) - 2 doses
-               7. Sputnik V - 2 doses
-               8. Covaxin (Bharat Biotech) - 2 doses
+                CoronaVac (Sinovac) - 2 doses
+                AstraZeneca / Covishield - 2 doses
+                Pfizer BioNTech - 2 doses
+                Janssen (Johnson&Johnson)
+                Moderna - 2 doses
+                COVILO (Sinopharm) - 2 doses
+                Sputnik V - 2 doses
+                Covaxin (Bharat Biotech) - 2 doses
         ### Одобрены только для программы «Песочница»
-               9. Medigen - 2 doses
-               10. Sputnik Light - 1 dose
+                Medigen - 2 doses
+                Sputnik Light - 1 dose
     - question: Что такое отели SHA Extra+
       hashtag: shaextra+
       ldjson: yes
       answer: |
         * Отели SHA Extra + это отели, которые соответствуют стандартам «Amazing Thailand Safety and Health Administration» и могут быть использованы в качестве отелей по программе Песочница, а также в качестве мест, которые предназначены для ожидания результатов ваших ПЦР-тестов с обратной транскрипцией по программе Test and Go
         Список всех отелей стандарта «SHA Extra+» доступен на сайте
-        https://web.thailandsha.com/shaextraplus
+        [https://web.thailandsha.com/shaextraplus]
     - question: Как записаться на ПЦР для Пхукета
       hashtag: pcrphuket
       ldjson: yes
@@ -268,12 +268,12 @@
       answer: |
        * В наши дни в туристическом центре острова повысился уровень преступности. Будьте осторожны, когда знакомитесь с местными на улице.
          В период летних муссонов можно утонуть, если Вы будете находиться в районе пляжа. Вообще-то местная морская полиция предупреждает об опасности, устанавливая специальные знаки о запрете пребывания на пляже. Летом в 2009 году в сезон муссонов здесь утонуло три человека.
-         Телефон туристической полиции – «1155». С местными «туристическими» полицейскими можно общаться по-английски, уровень владения языком у них хороший. Обычная тайская полиция – дело другое. Если что случится, в конфликте с местными виноваты будете Вы.
+         Телефон туристической полиции – 1155. С местными «туристическими» полицейскими можно общаться по-английски, уровень владения языком у них хороший. Обычная тайская полиция – дело другое. Если что случится, в конфликте с местными виноваты будете Вы.
     - question: Полезные телефоны
       hashtag: call
       ldjson: yes
       answer: |
-       * Теперь о полезных телефонах чтоб позвонить в скорую, набирайте 1719 при звонках в национальную миграционную медицинскую службу - 1669 в туристическую полицию Пхукета – «1155», «214368» или «+66(76)254693» в морскую полицию звоните по телефону «215438» или «+66(76)211883» телефон провинциального управления Пхукета – «+66 (76) 211 366» тел. Международного аэропорта Пхукета «+66 (76) 272 306».
+       * Теперь о полезных телефонах чтоб позвонить в скорую, набирайте 1719 при звонках в национальную миграционную медицинскую службу - 1669 в туристическую полицию Пхукета – 1155, 214368 или +66(76)254693 в морскую полицию звоните по телефону «215438» или «+66(76)211883» телефон провинциального управления Пхукета – «+66 (76) 211 366» тел. Международного аэропорта Пхукета «+66 (76) 272 306».
 - question: Дети
   hashtag: children
   items:
