--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -213,7 +213,7 @@
       hashtag: sha
       ldjson: yes
       answer: |
-        ### [https://shaplushotels.com/ru/]
+        ### [Посмотреть Отели Sha](https://shaplushotels.com/ru/)
     - question: Сколько сидеть на карантине?
       hashtag: covid19sitdown
       ldjson: yes
