--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -7,6 +7,7 @@
       ldjson: yes
       answer: |
        *    Есть несколько вариантов покупки экскурсии на Пхукете. Самый простой вариант это купить экскурсию у отельного гида. В таком случае вам не придется ничего и никого искать, купите экскурсию на месте, но у такого вариант есть несколько существенных недостатков. Во-первых, стоимость экскурсии у отельного гида будет выше, причем порой выше не на незначительную сумму, а в два и более раз. Во-вторых, чаще всего предложения гида ограничиваются небольшим предложением экскурсий.
+         
          Второй вариант покупки экскурсии это воспользоваться услугами гидов, которые предлагают свои услуги через разные сайты и социальные сети. В таком случае вам никто не предоставит никаких гарантий, не покажет сертификатов, лицензий. Здесь вы можете ориентироваться только на отзывы туристов и надеяться, что вам повезет. Преимущество такого вида экскурсии в том, что можно поторговаться, обсудить маршрут и детали поездки, поставить какие-то свои условия. Недостатки заключаются в том, что никто вам не даст никаких гарантий безопасности, так как эти люди работают нелегально, и в случае чего, вы даже претензии не сможете никому предъявить. Среди людей, предоставляющих такие услуги, довольно часто встречаются мошенники, так что не нужно делать никакие предоплаты, даже самые минимальные.
          Более-менее безопасно можно купить экскурсии в уличном агентстве, которых на Пхукете много. В таком агентстве вы можете купить экскурсии дешевле, чем предлагает гид, и выбор там будет гораздо больше. Минусом покупки в таких агентствах является то, что в них не часто можно встретить квалифицированного русскоязычного гида, который смог бы интересно провести экскурсию. Если вы внесли предоплату или полностью оплатили экскурсию, то в случае отказа от поездки деньги вам не вернут. Легальность этих агентств тоже может вызывать сомнение.
          На Пхукете также можно найти легальные туристические агентства, в которых отличный сервис. Цены выше чем у нелегалов, но все равно получится дешевле чем покупать у отельного гида. Практически в каждом таком агентстве есть профессиональные русскоязычные гиды. Владельцы таких фирм дорожат своей репутацией, поэтому в случае необходимости идут навстречу клиентам и в случае необходимости переносят экскурсии на другие даты. Большинство легальных туристических агентств имеют официальные сайты, где можно не только ознакомиться с предложениями, но и забронировать экскурсию.
@@ -230,7 +231,7 @@
       hashtag: vac
       ldjson: yes
       answer: |
-        # Одобрены  для программ Test and Go / «Песочница»
+        ### Одобрены  для программ Test and Go / «Песочница» h3
                 CoronaVac (Sinovac) - 2 doses
                 AstraZeneca / Covishield - 2 doses
                 Pfizer BioNTech - 2 doses
@@ -239,7 +240,7 @@
                 COVILO (Sinopharm) - 2 doses
                 Sputnik V - 2 doses
                 Covaxin (Bharat Biotech) - 2 doses
-        # Одобрены только для программы «Песочница»
+        ### Одобрены только для программы «Песочница» h3
                 Medigen - 2 doses
                 Sputnik Light - 1 dose
     - question: Что такое отели SHA Extra+
