--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -6,7 +6,7 @@
       hashtag: funphucetex
       ldjson: yes
       answer: |
-           Есть несколько вариантов покупки экскурсии на Пхукете.
+       * Есть несколько вариантов покупки экскурсии на Пхукете.
          Самый простой вариант это купить экскурсию у отельного гида. В таком случае вам не придется ничего и никого искать, купите экскурсию на месте, но у такого вариант есть несколько существенных недостатков. Во-первых, стоимость экскурсии у отельного гида будет выше, причем порой выше не на незначительную сумму, а в два и более раз. Во-вторых, чаще всего предложения гида ограничиваются небольшим предложением экскурсий.
          Второй вариант покупки экскурсии это воспользоваться услугами гидов, которые предлагают свои услуги через разные сайты и социальные сети. В таком случае вам никто не предоставит никаких гарантий, не покажет сертификатов, лицензий. Здесь вы можете ориентироваться только на отзывы туристов и надеяться, что вам повезет. Преимущество такого вида экскурсии в том, что можно поторговаться, обсудить маршрут и детали поездки, поставить какие-то свои условия. Недостатки заключаются в том, что никто вам не даст никаких гарантий безопасности, так как эти люди работают нелегально, и в случае чего, вы даже претензии не сможете никому предъявить. Среди людей, предоставляющих такие услуги, довольно часто встречаются мошенники, так что не нужно делать никакие предоплаты, даже самые минимальные.
          Более-менее безопасно можно купить экскурсии в уличном агентстве, которых на Пхукете много. В таком агентстве вы можете купить экскурсии дешевле, чем предлагает гид, и выбор там будет гораздо больше. Минусом покупки в таких агентствах является то, что в них не часто можно встретить квалифицированного русскоязычного гида, который смог бы интересно провести экскурсию. Если вы внесли предоплату или полностью оплатили экскурсию, то в случае отказа от поездки деньги вам не вернут. Легальность этих агентств тоже может вызывать сомнение.
@@ -21,7 +21,7 @@
       hashtag: funphucetpatong
       ldjson: yes
       answer: |
-       *    На пляжах Ката, Карон и Раваи также есть множество баров в традиционном тайском и европейском стиле. Примером может служить диско-бар Lagoon, ночной диско-бар Icon, Reggae Bar.
+       * На пляжах Ката, Карон и Раваи также есть множество баров в традиционном тайском и европейском стиле. Примером может служить диско-бар Lagoon, ночной диско-бар Icon, Reggae Bar.
          Пхукет-таун, далекий от массового туризма, отличается дружелюбной атмосферой, и все желающие могут посетить многочисленные клубы и бары с живой музыкой и разнообразным репертуаром – Кью, Кор Тор Мор, Софа. Первый особенно понравится любителям бильярда и необычных алкогольных коктейлей.
          На пляже Лаян есть многоуровневый Dream Club. К услугам посетителей ресторан, два бассейна, четыре бара и ночной клуб. Днем он работает в режиме лаунж легкие звуки танцевальной музыки, предлагаются безалкогольные напитки и коктейли, вокруг бассейнов расставлены удобные пляжные лежаки и шезлонги. Ночью двери заведения открываются для желающих поужинать, потанцевать и повеселиться у моря.
          Catch — это стильный ночной клуб и лаунж-бар, предлагающий французский буфет на пляже Сурин. Как и в Dream Beach Club, днем здесь можно расслабиться и, лежа у бассейна, не спеша пить фирменные коктейли. После захода солнца здесь начинает собираться молодежь, чтобы бешено танцевать под местных и зарубежных ди-джеев.
