--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -232,18 +232,18 @@
       hashtag: vac
       ldjson: yes
       answer: |
-        ## Одобрены  для программ Test and Go / «Песочница» 
-                CoronaVac (Sinovac) - 2 doses
-                AstraZeneca / Covishield - 2 doses
-                Pfizer BioNTech - 2 doses
-                Janssen (Johnson&Johnson)
-                Moderna - 2 doses
-                COVILO (Sinopharm) - 2 doses
+        ### Одобрены  для программ Test and Go / «Песочница» 
+                CoronaVac Sinovac 2 doses
+                AstraZeneca / Covishield  2 doses
+                Pfizer BioNTech 2 doses
+                Janssen Johnson&Johnson
+                Moderna  2 doses
+                COVILO Sinopharm  2 doses
                 Sputnik V - 2 doses
-                Covaxin (Bharat Biotech) - 2 doses
-        ## Одобрены только для программы «Песочница» 
-                Medigen - 2 doses
-                Sputnik Light - 1 dose
+                Covaxin Bharat Biotech  2 doses
+        ### Одобрены только для программы «Песочница» 
+                Medigen  2 doses
+                Sputnik Light  1 dose
     - question: Что такое отели SHA Extra+
       hashtag: shaextra+
       ldjson: yes
