--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -127,7 +127,7 @@
       hashtag: howmuchdoesfoodcost
       ldjson: yes
       answer: |
-        * В зависимости от ваших вкусовых предпочтений и места, где будет расположен ваш отель. Самое бюджетное место, где можно покушать - Патонг. Здесь можно уложиться на человека в 300 рублей. Бухта Банг Тао самая дорогая. В среднем стоимость нормального ужина или обеда будет в районе 1000 рублей, без алкоголя за двоих.
+        * В зависимости от ваших вкусовых предпочтений и места, где будет расположен ваш отель. Самое бюджетное место, где можно покушать - Патонг. Здесь можно уложиться на человека в 100 бат. Бухта Банг Тао самая дорогая. В среднем стоимость нормального ужина или обеда будет в районе 350 бат, без алкоголя за двоих.
     - question: Где поесть в районе пляжа Камала Бич?
       hashtag: Beach
       ldjson: yes
