--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -321,6 +321,11 @@
       ldjson: yes
       answer: |
         * Теперь о полезных телефонах чтоб позвонить в скорую, набирайте 1719 при звонках в национальную миграционную медицинскую службу - 1669 в туристическую полицию Пхукета – 1155, 214368 или +66(76)254693 в морскую полицию звоните по телефону «215438» или «+66(76)211883» телефон провинциального управления Пхукета – «+66 (76) 211 366» тел. Международного аэропорта Пхукета «+66 (76) 272 306».
+    - question: Что запрещенно ввозить/вывозить?
+      hashtag: animalphuket
+      ldjson: yes
+      answer: |
+      
 - question: Дети
   hashtag: children
   items:
