--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -157,6 +157,7 @@
         * Рестораны McDonald's на Пхукете есть, причем речь идет не о каком-то одном заведении, а о целой сети. Больше всего их сосредоточено на пляже Патонг, а также есть в популярных среди местных жителей и туристов, торговых центрах Tesco Lotus и Central Festival. Также на Пхукете есть один круглосуточный торговый McDonald's. Его вы сможете найти возле торгового центра Robinson.
         
           Что касается разницы между тайским и европейским Макдональдсом, то ее по большому счету нет. Все те же булочки с кунжутом, куриные крылышки, десерты и т.д. Нет, может какие-то особенности есть, но они не принципиальны.
+          В таиском маке всегда есть и нормальная еда, рис с разными джобавками, салаты. Также есть так же чисто тайские блюда, например мороженое с чили пастой и свининой - советую попробовать.
 - question: Проживание
   hashtag: accommodation
   items:
@@ -325,7 +326,11 @@
       hashtag: animalphuket
       ldjson: yes
       answer: |
-      
+       Абсолютный запрет на вывоз касается -
+       порнографии,предметов с изображением флага королевства, наркотиков;,фальшивых денег, ценных бумаг,предметов, нарушающие права интеллектуальной собственности (например, нелицензионные программы)
+       иного контрафакта,в таиланде запрещены ЛЮБЫЕ фальшивые деньги. игрушка это или прикол...вообще не важно...было много случаев с реальным сроком.
+       
+       
 - question: Дети
   hashtag: children
   items:
