--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -326,10 +326,11 @@
       hashtag: animalphuket
       ldjson: yes
       answer: |
-       Абсолютный запрет на вывоз касается -
+       * Абсолютный запрет на вывоз касается -
        порнографии,предметов с изображением флага королевства, наркотиков;,фальшивых денег, ценных бумаг,предметов, нарушающие права интеллектуальной собственности (например, нелицензионные программы)
        иного контрафакта,в таиланде запрещены ЛЮБЫЕ фальшивые деньги. игрушка это или прикол...вообще не важно...было много случаев с реальным сроком.
        
+       * В разумных количествах можно вывозить фрукты, растения, но без земли, кошку собаку, вроде больше ни каких других животных нельзя. а то часто покупают обезьяну
        
 - question: Дети
   hashtag: children
