--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -170,37 +170,21 @@
       hashtag: cheaphousing
       ldjson: yes
       answer: |
-        * Если бюджет вашей поездки ограничен, то самым доступным по стоимости вариантом жилья на Пхукете будет гестхаус. Проще говоря, это гостевой дом, который является отличной альтернативой отелям, апартаментам и прочему арендованному жилью. Мнение о том, что это жилье подходит исключительно на короткий срок не соответствует действительности, многие туристы останавливаются в гестхаусах на месяц и более. Когда на первом месте стоит экономия, то многие готовы пожертвовать многими благами отдыха. Гестхаусы в отличие от отелей не делятся на категории и не имеют звездности. Чаще всего такое жилье представляет собой комнату с санузлом и минимальным набором услуг. Кухня обычно общая, есть гостиная с телевизором. Только в единичных гестхаусах есть бассейны, чаще всего бассейна нет. Принцип аренды такого жилья, такой же как и принцип аренды отелей  это можно сделать он-лайн, через интернет или же забронировать жилье на месте, на стойке рецепшена. Второй вариант лучше, но в высокий сезон могут быть проблемы с наличием свободных мест. Многие туристы отмечают, что ряд трехзвездочных отелей на Пхукете ничем не лучше гестхаусов, а по стоимости в несколько раз дороже.
+        * Если бюджет вашей поездки ограничен, то самым доступным по стоимости вариантом жилья на Пхукете будет гестхаус. Проще говоря, это гостевой дом, который является отличной альтернативой отелям, апартаментам и прочему арендованному жилью. Мнение о том, что это жилье подходит исключительно на короткий срок не соответствует действительности, многие туристы останавливаются в гестхаусах на месяц и более. Когда на первом месте стоит экономия, то многие готовы пожертвовать многими благами отдыха. Гестхаусы в отличие от отелей не делятся на категории и не имеют звездности. Чаще всего такое жилье представляет собой комнату с санузлом и минимальным набором услуг. Кухня обычно общая, есть гостиная с телевизором. Только в единичных гестхаусах есть бассейны, чаще всего бассейна нет. Принцип аренды такого жилья, такой же как и принцип аренды отелей  это можно сделать он-лайн, через интернет или же забронировать жилье на месте, на стойке ресепшена. Второй вариант лучше, но в высокий сезон могут быть проблемы с наличием свободных мест. Многие туристы отмечают, что ряд трехзвездочных отелей на Пхукете ничем не лучше гестхаусов, а по стоимости в несколько раз дороже.
         
-          Стоимость аренды зависит от ее срока, причем зависит существенно. Если за суточное проживания в гестхаусе нужно заплатить порядка 15 долларов в сутки, то за месяц эта сумма будет составлять примерно 150-180 долларов. Наибольшее влияние на стоимость оказывает расположение гестхауса, но такая же ситуация и с отелями. На Патонге стоимость аренды будет в 1,5 раза выше, чем в столице острова городе Пхукет. Кроме этого стоимость зависит от ряда дополнительных услуг (завтрак, уборка, доступ к интернету и т.д.). Также существенное влияние на стоимость оказывает размер комнаты, чем меньше комната, тем цена ниже. Маленькую комнату предпочитают молодые пару, которые приезжают отдыхать и развлекаться, а гестхаус им нужен только для ночлега и принятия душа (в таком случае размер комнаты не имеет значения). Можно найти гестхаус на определенном расстоянии от пляжа и при этом взять в аренду мопед. Экономия должна быть объективной, не нужно искать самый дешевый гестхаус, а потом думать, как оттуда съехать, чаще всего, чем ниже цена, тем хуже условия.
+          Стоимость аренды зависит от ее срока, причем зависит существенно. Если за суточное проживания в гестхаусе нужно заплатить порядка 15 долларов в сутки, то за месяц эта сумма будет составлять примерно 150-180 долларов. Наибольшее влияние на стоимость оказывает расположение гестхауса, но такая же ситуация и с отелями. На Патонге стоимость аренды будет в 1,5 раза выше, чем в столице острова городе Пхукет. Кроме этого стоимость зависит от ряда дополнительных услуг (завтрак, уборка, доступ). Также существенное влияние на стоимость оказывает размер комнаты, чем меньше комната, тем цена ниже. Маленькую комнату предпочитают молодые пару, которые приезжают отдыхать и развлекаться, а гестхаус им нужен только для ночлега и принятия душа (в таком случае размер комнаты не имеет значения). Можно найти гестхаус на определенном расстоянии от пляжа и при этом взять в аренду мопед. Экономия должна быть объективной, не нужно искать самый дешевый гестхаус, а потом думать, как оттуда съехать.
           
           При аренде гестхауса на месяц нужно обговорить все моменты такой аренды  частоту смены белья, уборку, размер депозита и условия его возвращения. Скорее всего, дополнительно придется оплачивать некоторые коммунальные услуги (за воду устанавливают фиксированную сумму, а свет по счетчику). Каждый хозяин гестхауса устанавливает свои правила и прежде чем заселиться в номер нужно с ними ознакомиться.
-          
-          Гестхаусы предлагают широкий выбор услуг, начиная от организации экскурсии и заканчивая предложения по стирки и глажке, но не всегда эти услуги отличаются высоким качеством (особенно это касается стирки). В некоторых гестхаусах в стоимость включен бесплатный интернет, но, как правило, связь такого интернета очень слабая (посмотреть почту хватит, а загрузит видео – вряд ли). Проще всего купить симку у местного оператора и пользоваться мобильным интернетом.
-          
+                    
           Кроме депозита в денежной форме, вас попросят оставить ксерокопию паспорта. Ничего страшного в этом нет, а вот если попросят оставить оригинал паспорта, то это повод задуматься над тем стоит останавливаться в этом гестхаусе или лучше подыскать другой вариант (я бы вам советовал паспорт и другие документы никому и ни при каких обстоятельства не оставлять).
     - question: Могут ли заселить в отель в один номер совершеннолетнего парня и несовершеннолетнюю девушку?
       hashtag: hotelyoung
       ldjson: yes
       answer: |
         * Если документально будет подтверждено Ваше родство, то вопросов не возникнет, но есть ряд отелей, класса люкс, которые настолько дорожат своей репутацией, что могут отказать в заселение, но это будет сделано заранее или же будет предоставлено место в другом отеле, просто на улицу никого не выгонят.
-    - question: Какой отель выбрать на Пхукете?
-      hashtag: hotelphuket
-      ldjson: yes
-      answer: |
-        * В двух шагах от пляжа Карон расположен отель Phuket Island View 3*. Только дорогу надо перейти, а так совсем близко к пляжу, примерно метров 50-70. Из "трешек" это один из лучших отелей на Пхукете. Мы платили за двоих в сентябре прошлого года 72 тысячи рублей. Отдыхали неделю, не думаю, что нынче дороже. К отелю вообще никаких претензий не было у нас. Все супер! Питание, уборка, бассейн очень чистый. Анимации не было, что нас очень обрадовало. Из Украины и России совсем мало было отдыхающих. Не знаю, может мы так попали, в такой период времени, но родную речь практически не слышали. Еще очень хорошая "трешка" - Kata Country House 3*, этот отель уже в районе другого пляжа - Ката. Там жили наши друзья, мы ездили к ним в гости. Понравилось, что территория прямо-таки утопает в зелени. Хороший отель по очень лояльной цене. Друзья платили за двоих на две недели около 100 тысяч. Разумеется, цены я привела вместе с перелетом туда-обратно.
 - question: Валюта
   hashtag: currency
   items:
-    - question: Где на Пхукете можно поменять рубли?
-      hashtag: exchanger
-      ldjson: yes
-      answer: |
-        * Для начала, конечно, было бы не плохо, если есть возможность, узнать курс бата к рублю и к доллару, который установлен сейчас на о.Пхукет. И потом уже рассчитать выгоду и выбрать валюту. По логике очень не выгодно рубли менять на доллары, а потом доллары на баты. Двойной обмен, а значит и потери двойные.
-        
-          Я как-то поехала с долларами и пролетела... Курс рубля к бату был почти 1.1. Получилось с рублями было выгоднее. Теперь в Тай только с рублями сама езжу и друзьям рекомендую.
-          
-          По поводу обменных пунктов нет никаких проблем, почти во всех принимают рубли, главное крупными купюрами.
     - question: Как работают обменники в аэропорту Пхукета?
       hashtag: airportexchange
       ldjson: yes
@@ -208,6 +192,7 @@
         * Обменять валюту ночью в аэропорту Пхукета Вы действительно сможете у девушек при выходе из аэропорта. Конечно, курс у них будет очень занижен, но меняйте небольшую сумму денег, чтобы добраться только до отеля. А утром Вы сможете уже обменять валюту в многочисленных пунктах обмена. В аэропорту менять деньги не стоит даже днем, курс там всегда занижен не менее чем на 1,5%.
         
           В Таиланд лучше всего брать доллары и менять их нужно в банковских обменных пунктах, которые работают с 8.00 утра до 22.00 вечера. В Таиланде существуют банковские обменные пункты и частные лавки по обмену валюты, в которые ходить не стоит, они не предложат Вам выгодный курс обмена валюты. Так же не меняйте деньги в гостинице, там тоже курс обмена занижен.
+          Чем больше купюра номиналом и новее- курс будет выше, чем за ту же сумму но купюры меньше.
           
           Все расчеты в Таиланде производятся в тайских батах, но если валюту Вы нигде не поменяете, таксисты будут рады доставить Вас в отель и примут к оплате доллары. Конечно, цену заломят, но в Таиланде принято торговаться, и стоимость поездки будет зависеть от Вашего умения торговаться.
 - question: Транспорт
@@ -217,7 +202,8 @@
       hashtag: rentacar
       ldjson: yes
       answer: |
-        * Да, можно. Опять же, рекомендуется использовать услугу аренды автомобилей SHA Plus, хотя это не обязательно.
+        * В Тайланде очень опасно на дорогах,так что нужно иметь страховку, если её нет лучше походить пешком.Есть аренда авто
+          и аренда байков.
     - question: Как добраться из аэропорта Пхукета до Као Лак?
       hashtag: Хэш
       ldjson: yes
@@ -250,7 +236,7 @@
       hashtag: topupconnection
       ldjson: yes
       answer: |
-        * Если Ваш английский язык находится на высоте, то приобретать сотовый телефон лучше в торговом центре Джанг Цейлон. Это огромный центр, в котором можно найти все что Вам нужно и цены там действительно намного ниже чем России. Однако, если Вы плохо знаете язык, то лучше приобрести телефон на родине, так как все телефоны на Пхукете ориентированы на иностранных граждан и русского языка в них не предусмотрено.
+        * Если Ваш английский язык находится на высоте, то приобретать сотовый телефон лучше в торговом центре Джанг Цейлон. Это огромный центр, в котором можно найти все что Вам нужно и цены там действительно намного ниже чем России.
 - question: COVID-19
   hashtag: covid19
   items:
@@ -263,7 +249,10 @@
       hashtag: covid19sitdown
       ldjson: yes
       answer: |
-        ### 1-й день находиться в отеле и не выезжать за пределы региона 7 дней по программе SANDBOX
+        Есть просто программа карантин—для тех кто без вакцинации вообще или с непризнанной. Карантин 7-10 дней, смотря какие условия точно, хотят уменьшить до 5 дней. это строгий карантин без выхода из номера вообще.
+        есть сандбокс-песочница.  Сидите до первого теста в номере, потом можно гулять и все что угодно делать. ночевать в отеле и нельзя уезжать.
+        и есть Test and Go
+        ждать тест нужно в номере и потом свободны..на 5й день делаете экспресс тест сам.
     - question: Полностью вакцинированные путешественники?
       hashtag: vaqcine
       ldjson: yes
@@ -308,6 +297,7 @@
       ldjson: yes
       answer: |
         * Вывоз животных из Пхукета сопровождается установленными правилами. Прежде всего, у животного должен быть ветеринарный паспорт со всеми указанными необходимыми прививками. Надо подготовить документы для вывоза животного (если его можно вывозить), перечень которых выдаст ветеринарная лечебница. Если надо совершать перелет, о том что будет "лететь" животное, компанию надо заблаговременно оповестить. И надо не забывать что все эти хлопоты ещё и стоят немалых денег.
+          обязательно должен быть паспорт, чип и прививки все, прививка от бешенства должна быть не позже чем за 30 дней поставлена, за 24 часа анализ кала.      
     - question: Правила безопасного поведения на Пхукете
       hashtag: rulles
       ldjson: yes
