--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -315,12 +315,23 @@
 - question: Дети
   hashtag: children
   items:
+    - question: Отдых с ребёнком?
+      hashtag: chdhphuket
+      ldjson: yes
+      answer: |
+       Тайцы очень любят детей. и всюду вы сможете найти все условия для пребывания с детьми. Ни где не будут смотреть косо, если ваш ребенок кричит, плачет и тд...не стоит бояться.
+       
+       Везде помогут если попросите. 
+       
+       На пхукете легко будет найти няню, тайку, филипинку, бирманку...и даже русскую, если так хочется.  Берут не дорого, могут еще и еды приготовить и в доме убрать.
+       
+       обычно все нанимают няню.
     - question: Что взять с собой на Пхукет с ребенком?
       hashtag: chdhphuket
       ldjson: yes
       answer: |
         * Вопрос поездки с ребенком (особенно маленьким) в такую страну как Таиланд потребует от вас большого внимания и концентрации. Пхукет никак нельзя назвать необитаемым островом, наоборот, здесь отличная инфраструктура и вы можете купить все необходимое на месте, но я считаю, что не стоит на это надеяться, а лучше 80-90 процентов необходимого взять с собой. В перечне вещей, необходимых взять с собой должны быть легкие вещи (в том числе и с длинным рукавом), головные уборы, все, что необходимо для купания. В зависимости от финансовых возможностей вы должны решить необходимы ли вам маски, трубки и прочие атрибуты необходимые для отдыха на море или вам проще купить их на месте (я считая, что лучше брать свое, так как у нас эти вещи стоят дешевле и как показывает практика, намного практичнее). Но если вы собрались на отдых с ребенком, то в первую очередь нужно позаботиться о лекарственных препаратах. Во-первых, вы должны понимать, что едете на отдых в совершенно другую страну в плане климатических условий, а во-вторых, вам придется столкнуться с другой пищей, и как на эту смену отреагирует желудок неизвестно. Возьмите препараты от расстройства желудка, против расстройства желудка, жаропонижающее средства. Если есть какие-то хронические заболевания, то не надейтесь, что необходимые лекарства вы купите на Пхукете – необходимое количество препаратов берите с собой.
-        
+          Смеси, каши...здесь это все есть но в основном только в больших магазинах, и цены гораздо выше. качество в прочем тоже лучше.
           При отдыхе с ребенком (даже и без ребенка) необходимо взять ряд средств, которые защитят вас от комаров. Солнцезащитные крема должны быть с максимальной защитой. Вот крема везти с собой не обязательно, на Пхукете продаются прекрасные средства, которые могут хорошо защитить кожу от воздействия солнечных лучей.
     - question: Какой пляж лучше на Пхукете для отдыха с детьми?
       hashtag: childphucet
