--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -357,7 +357,7 @@
         * Первые несколько дней отдыха на Пхукете станут для малышей адаптационными. В это период чад лучше всего кормить знакомыми блюдами и продуктами. Готовые молочные смеси, каши и пюре в баночках проще всего будет купить в супермаркетах. Правда, среди готовых пюре редко попадаются овощные, большей часть представлены детские консервы из местных фруктов. В тех же супермаркетах продаются хлопья, йогурты и молоко, а вот кефир и творожок мне найти не удалось.
           В магазине Севен-Элевен в районе Ката и супермаркете Семейный продаются кроме прочего готовые сэндвичи в упаковке и вареные яйца.
         
-          Свежие фрукты и овощи для детей проще всего будет купить на рынке Банзан, который находится на улице Ратутит недалеко от набережной Патонг. Цены на фрукты здесь выше, чем магазинах, но ежедневно подвозится свежий товар и можно купить понравившийся зеленый апельсин или желтый арбуз поштучно.
+          Свежие фрукты и овощи для детей проще всего будет купить на рынке Банзан, который находится на улице Ратутит недалеко от набережной Патонг. ележки с очень дешевыми фруктами- на резаными и на чищеными регулярно есть в оживленных местах, так же тележки с мороженым, кукурузой, бататом, шашлычками, блинчиками ротти и всякими другими вкусностями.
         
           Что же касается готовой еды, то в районе многих пляжей острова работают русские и итальянские рестораны, в меню которых имеется обычное пюре с котлетой или спагетти. Из блюд тайской кухни детям могут прийтись по вкусу жареные овощи (пад пак руам), омлет (кхай тияо) или рис с курицей (кхау мак кхай).
     - question: Детский врач?
