--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -374,7 +374,7 @@
       hashtag: pododadojd
       ldjson: yes
       answer: |
-        * В Пхукете меньше всего осадков бывает с марта по май. В это время там стоит особенно сильная жара. Больше всего дождей в июле. Во все остальные месяцы в году дожди могут идти, но их интенсивность непредсказуема. Некоторые мои знакомые также говорят, что дождей на острове Пхукет также практически не бывает зимой. Но сказать точно не могу, поскольку отдыхал там только весной и летом.
+        * В Пхукете меньше всего осадков бывает с марта по май. В это время там стоит особенно сильная жара. Больше всего дождей в июле. Во все остальные месяцы в году дожди могут идти, но их интенсивность непредсказуема. Некоторые мои знакомые также говорят, что дождей на острове Пхукет также практически не бывает зимой.Дождь как правило пол часа в день и можно спокойно идти на пляж. Но в сезон дождей бывают и потопы, так как в тае в принципе плохо продумана система отвода воды.
     - question: Какая погода на Пхукете в июне? Не получится ли так, что придется сидеть в отеле из за дождей?
       hashtag: pogodajuli
       ldjson: yes
