--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -387,6 +387,32 @@
 - question: Храмы
   hashtag: khrams
   items:
+   - question: Как проехать до Большого Будды (Big Budda) на Пхукете?
+      hashtag: khramphuketbudda
+      ldjson: yes
+      answer: |
+       Большой Будда (Big Budda) расположен на самой высокой точке острова Пхукет.
+
+       49-метровая Статуя Большого Будды расположена на горе между Катой и Чалонгом. Высота горы 350 метров, отсюда прекрасно видна южная и восточная части острова Равай, Чалонг, Пхукет таун.
+
+       Строительство началось еще 2008 г. на деньги собранные с пожертвований – в настоящее время строится буддийский храм в основании Статуи.
+
+       Здесь можно купить сувениры, а также внести свой вклад в строительство храма, купив мраморную дощечку или колокольчик для загадывания желаний.
+
+       Справочная информация о статуе Большого Будды
+
+       - Плата за вход Бесплатно
+
+       - Время работы Ежедневно с 9/00 до 18/00
+
+       - Как добраться до Большого Будды на автомобиле или мотобайке. К Большому Будде ходит много экскурсии, стоимость которых колеблется в районе 1000 (на человека), в зависимости от места отправления. Где то дороже, где то дешевле. И так так мы экономные туристы, мы выбираем своим основным средством передвижения мотобайк.
+       От Патонга нужно ехать через пляжи Карон и Ката до кольца Чалонг (Chalong Circle), на кольце повернуть налево (на дорогу, ведущую в аэропорт). Примерно через 700 метров на светофоре будет указатель налево. От указателя нужно ехать по стрелкам 6-7 км. Дальше по пути вы можете заехать на слоновью ферму, покормить слонов, и покататься на них. Главное не пропустить указатель поворота, на ферму слева от вас.
+
+       Как доберемся на место, паркуем байк на бесплатной парковке. Дальше идем к пропускному пункту.
+
+       На входе действует дресс-код для девушек, колени должны быть закрыты. На входе можно получить бесплатно, на прокат, длинную юбку.
+
+       На территории располагается здание для медитации, статуя Большого Будды и две смотровые площадки с которых открывается замечательный вид на весь Пхукет.
     - question: Какие храмы посетить на Пхукете?
       hashtag: khramphuket
       ldjson: yes
@@ -400,16 +426,4 @@
           Но не только буддистскими храмами богат Пхукет. Также на этом тайском острове есть православным храм. Это храм Святой Троицы, который был построен на пожертвования верующих. В храме проводятся все привычные нам христианские обряды. Ежедневно в 8 и 18 часов проходят Богослужения. По воскресеньям совершается Божественная Литургия. Этот храм находится в районе Таланг среди тропического леса.
           
           Что касается второй части вашего вопроса, то при посещении тайских храмов необходимо придерживаться определенных правил. Одежда не должна быть слишком открытой, она должна прикрывать плечи и колени. Разумеется, что не может быть речи ни о каких купальниках, шортах и коротких юбках. При входе в храм нужно обязательно снимать обувь. При входе в храм не наступайте на порог, его нужно переступать, не принято дотрагиваться к другим людям. Женщинам не только в храме, но и в любом другом месте запрещено дотрагиваться к монахам. Любые передачи монахам должны делаться исключительно через мужчину. Иногда монах может расстелить перед женщиной ткань, чтобы она положила на нее то, что хочет передать монаху.
-    - question: Как добраться до Белого Храма в Чианг Рае?
-      hashtag: khramphuketwhite
-      ldjson: yes
-      answer: |
-        * Вариантов может быть только два аренда байка или же поездка на автобусе. Если вас не смущает чужая страна и местные особенности дорожного движения, то лучше взять в аренду транспортное средство и не зависеть от расписания движения общественного транспорта. А если такой вариант вам не очень нравится, то тогда остается автобус. Учитывая, что это эта достопримечательность набирает все большую популярность, то никаких проблем с транспортом у вас не возникнет. Большинство туристов предпочитают добираться автобусом, так как в таком случае возникает меньше хлопот, связанных с арендой.
-- question: Экскурсии
-  hashtag: travele
-  items:
-    - question: Можно ли купить экскурсии в Отеле?
-      hashtag: travelephu
-      ldjson: yes
-      answer: |
-        * Покупка экскурсий в отеле - один из самых простых вариантов. В этом случае Вы застрахованы самим туроператором и потом у Вас, при возникновении претензий, будет возможность все беспроблемно решить. Но они действительно стоят намного дороже. Я бы посоветовала пообщаться с туристами, которые уже отдыхают в Вашем отеле, и узнать где они приобретали экскурсии, ведь в интернете можно написать все что угодно и не всегда отзывы являются правдой. Удачного Вам отдыха!
+
