--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -48,12 +48,12 @@
       hashtag: nigth
       ldjson: yes
       answer: |
-        * Леди-бары Пхукета
-          Бары Гоу-Гоу
-          Диско-клубы и дэнс-клубы
-          Пивные бары
-          Спорт-бары
-          Музыкальные и лаунж-бары
+        * Леди-бары Пхукета,
+          Бары Гоу-Гоу,
+          Диско-клубы и дэнс-клубы,
+          Пивные бары,
+          Спорт-бары,
+          Музыкальные и лаунж-бары.
     - question: Где на Пхукете заняться йогой?
       hashtag: yoga
       ldjson: yes
