--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -388,7 +388,7 @@
   hashtag: khrams
   items:
    - question: Как проехать до Большого Будды (Big Budda) на Пхукете?
-      hashtag: khramphuketbudda
+      hashtag: khramphuketbud
       ldjson: yes
       answer: |
           Большой Будда (Big Budda) расположен на самой высокой точке острова Пхукет.
