--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -2,6 +2,58 @@
 - question: Отдых и Развлечения
   hashtag: Recreationandentertainment
   items:
+    - question: Где можно покататься на слонах на пхукете?  
+      hashtag: slony
+      ldjson: yes
+      answer: |
+	      Siam Safari. Сиам Сафари - это одна из наиболее надежных компаний, организующих эко-туры в Пхукете. ... 
+          Safari Elephant Club. Открытый в 1986 году Safari Elephant Club претендует на звание самого старого лагеря слонов в Пхукете. ... 
+          Kok Chang Elephant Camp. ... 
+          Camp Chang Kalim.
+          Ежедневно с 08.00 до 17.30. Прогулка на слонах: 1400 батов для взрослых и 900 батов для детей от 4 до 10 лет за получасовую прогулку, дети до 4 лет — бесплатно
+    - question: Где есть тигры на пхукете?   
+      hashtag: tigry
+      ldjson: yes
+      answer: |
+	      Тигры на Пхукете: новый Tiger Park Phuket или в клетке с тигром два
+          Tiger Kingdom – в районе Кату перед перевалом на Патонг (Важно: сейчас в этом парке нет маленьких тигров, только большие и средние)
+          Tiger Park Phuket – новый парк с тиграми на Пхукете по дороге на Биг Будду.
+	- question: Где посмотреть обезьян на пхукете?  
+      hashtag: obeziany
+      ldjson: yes
+      answer: |
+	      В первую очередь нужно отправиться на гору Monkey Hill. Она находится в северной части Пхукет-Тауна. Вершину ее венчают разнообразные антенны и радиомачты. Обезьяны также живут в основном в верхней части горы
+    - question: Смотровые площадки Пхукетa 
+      hashtag: smotrovie
+      ldjson: yes
+      answer: |
+	      Холм Ранг (Rang Hill), Мост Сарасин, Смотровая площадка у подножия Большого Будды, Смотровая площадка «Ветряки», Смотровая площадка «Карон» (Karon Viewpoint), Смотровая площадка мыса Промтхеп, Наш выбор: обзорная башня Кхао Кхад.
+    - question: Смотровые площадки Пхукетa 
+      hashtag: smotrovie
+      ldjson: yes
+      answer: |
+    - question: Лучшие места для дайвинга на пхукете
+      hashtag: daiving
+      ldjson: yes
+      answer: |
+	      Естественно, в первую очередь стоит указать Симиланские острова, которые являются одним из самых известных мест для дайвинга не только в Таиланде, но и во всем мире. Именно здесь можно полностью исследовать все богатство подводного мира Андаманского моря. Правда, нырять и любоваться таким зрелищем могут только сертифицированные дайверы.
+		  Остров Рача Яй. Этот остров расположен недалеко от Пхукета и хорошо известен дайверам со всего мира. Здесь есть неглубокие участки для новичков и более глубокие зоны (от 18 метров глубиной) для профессионалов. Остров также идеально подходит для снорклинга.
+          Острова Пхи Пхи также популярны среди дайверов. Архипелаг прославился своими прекрасными подводными пейзажами с коралловыми рифами. На островах есть несколько дайвинг центров с опытными инструкторами, которые обучат нырянию каждого желающего с любым уровнем подготовки.
+          Тем, кто занимается дайвингом на Пхукете профессионально, наверняка будет интересен затонувший в прибрежных водах лайнер «Кинг Круизер». Погрузившись на 30 метровую глубину, каждый дайвер здесь может сделать сенсационное открытие.
+          Прекрасное место, чтобы заняться дайвингом на Пхукете в открытом море – это Анемон Риф. Прекрасные анемоны, скалы, яркие рыбки и прочие подводные обитатели поразят своей красотой.
+          Погружение в Шарк Пойнт – это развлечение не для слабонервных. Здесь дайверы часто встречают прекрасных и устрашающих леопардовых акул. Но опасаться их не стоит, так как они питаются только планктоном и кораллами.
+          Любителей острых ощущений также могут заинтересовать многочисленные подводные пещеры возле острова Ко Док Май. Отвесные стены высотой около 50 метров над уровнем моря и 20 метров в глубину поразят своим величием.
+          Дайвинг на Пхукете - это возможность увидеть неповторимые подводные пейзажи, которые останутся в памяти на всю жизнь. Узнать более подробно о дайвинге на острове или заказать дайвинг тур по самым выгодным ценам можно на нашем сайте.
+    - question: Лучшие места для снорклинга на Пхукете.
+      hashtag: snorkling
+      ldjson: yes
+      answer: |
+	      Пляж Ката, Пляж Парадайз, Пляж Фридом, Пляж Найтон, Пляж Банана, Пляж Я Нуй, Пляж Ао Сан,Пляж Лем Ка, Пляж Лем Синг.
+    - question: Лучший пляж для серфинга на Пхукете.
+      hashtag: serfingphuket
+      ldjson: yes
+      answer: | 
+	      Лучшими для серфинга на Пхукете считаются пляжи западного побережья острова: Ката, Камала, Най Харн, Калим, Най Янг, Сурин и Пакаранг. Лучшим и самым востребованным среди серферов является пляж Ката, но необходимо быть особенно внимательным в южной его части, где много камней, в том числе не видных под водой.
     - question: Где покупать экскурсии на Пхукете?
       hashtag: funphucetex
       ldjson: yes
@@ -198,6 +250,11 @@
 - question: Транспорт
   hashtag: transport
   items:
+    - question: Есть ли аренда яхт на пхукете?
+      hashtag: rentayahta
+      ldjson: yes
+      answer: |
+	      Цена аренды яхты или катера на Пхукете зависит от типа яхты и маршрута и варьируется в пределах от 13 000 до 670 000 бат/сутки, что соответствует от 400 до 21000 долларов.
     - question: Могу ли я арендовать автомобиль на Пхукете?
       hashtag: rentacar
       ldjson: yes
@@ -426,5 +483,87 @@
           Но не только буддистскими храмами богат Пхукет. Также на этом тайском острове есть православным храм. Это храм Святой Троицы, который был построен на пожертвования верующих. В храме проводятся все привычные нам христианские обряды. Ежедневно в 8 и 18 часов проходят Богослужения. По воскресеньям совершается Божественная Литургия. Этот храм находится в районе Таланг среди тропического леса.
           
           Что касается второй части вашего вопроса, то при посещении тайских храмов необходимо придерживаться определенных правил. Одежда не должна быть слишком открытой, она должна прикрывать плечи и колени. Разумеется, что не может быть речи ни о каких купальниках, шортах и коротких юбках. При входе в храм нужно обязательно снимать обувь. При входе в храм не наступайте на порог, его нужно переступать, не принято дотрагиваться к другим людям. Женщинам не только в храме, но и в любом другом месте запрещено дотрагиваться к монахам. Любые передачи монахам должны делаться исключительно через мужчину. Иногда монах может расстелить перед женщиной ткань, чтобы она положила на нее то, что хочет передать монаху.
-
-
+- question: Пляжи
+  hashtag:  plazhu
+  items:
+	- question: Ну Пхукете море или океан?
+      hashtag: phuketmoreokean
+      ldjson: yes
+      answer: |
+	      Пхукет расположен у западного побережья Таиланда, в Андаманском море Индийского океана. Пхукет лидирует в списке крупнейших островов Таиланда.
+    - question: На пхукете есть акулы?
+      hashtag: phuketacula
+      ldjson: yes
+      answer: |
+	      Тропическое расположение Тайланда, теплая вода, разнообразие морской жизни привлекают в моря, омывающие эту страну, не только туристов со всего света, но и морских обитателей. Подводная фауна тайских вод разнообразна, представлена многочисленными видами, среди которых одними из наиболее колоритных по праву считаются акулы.
+	- question: Общество нудистов в Таиланде?
+      hashtag: phuketnudist
+      ldjson: yes
+      answer: |   
+	      К сожалению, эта часть нудистского отдыха невозможна даже на уединенных пляжах Пхукета. Так как у туристов нет возможности посетить официальный нудистский пляж в Таиланде, здесь образовалось общество нудистов, которое нашло способ не нарушать закон и отдыхать по своему усмотрению.
+    - question: Какие самые чистые пляжи пхукета?
+      hashtag: phuketplazhchustii
+      ldjson: yes
+      answer: |  
+	      Как известно, самые чистые участки береговой линии находятся возле отелей. Панси, к примеру, — целый пляж при отеле, за чистотой которого неустанно следит администрация. ... 
+          Пляж Ката Пляж Ката также считается одним из самых чистых, на берегу есть несколько крупных отелей. ... 
+          Пляж Банг Тао ... 
+          Пляж Найтон
+    - question: На каком пляже белый песок на пхукете?
+      hashtag: phuketplazhpesok
+      ldjson: yes
+      answer: | 
+	      Фридом - запад Пхукета. Один из лучших пляжей острова, песок мелкий, при определённом освещении - практически белый!
+    - question: Самые популярные пляжи пхукета.
+      hashtag: phuketpopular
+      ldjson: yes
+      answer: |
+	      Пляж Карон, Пляж Патонг,Пляж Ката, Пляж Камала — Kamala Beach, Пляж Сурин, Пляж Най Харн, Пляж Найтон,Пляж Банг Тао, Пляж Фридом, Пляж Май Као, Пляж Равай — Rawai Beach, Пляж Най Янг — Nai Yang  Beach, Пляж Три Транг – Tri Trang Beach, Пляж Чалонг — Chalong Beach.
+    - question: Пляжи пхукета для детей
+      hashtag: phuketplazhdeti
+      ldjson: yes
+      answer: |
+	      Пляжи Карон, Ката, Ката Ной, Най Харн,  Банг Тао, Камала, Сурин, Найтон.
+    - question: Как называеться пляж с самолетами на пхукете?
+      hashtag: phuketplazhsamolet
+      ldjson: yes
+      answer: |
+	      Май Као, Mai Khao — это пляж, который известен тем, что здесь очень низко пролетают самолеты, прямо над головой, иначе этот пляж так и называют — пляж с самолетами на Пхукете. В мире есть всего несколько таких пляжей, где посадочная и взлетная полоса аэропорта находятся прямо у пляжа.
+    - question: Дикие пляжи пхукета.
+      hashtag: phuketplazhdikiy
+      ldjson: yes
+      answer: |
+	      Пляж Лаян, Пляж Банана, Пляж Ао Сейн, Пляж Фридом, Пляж Май Као.
+    - question: Cамый чистый пляж пхукета
+      hashtag: phuketplazhsamiichistiy
+      ldjson: yes
+      answer: |
+	      Пляж Карон-Бич — самый красивый и самый чистый на Пхукете, находится на западном побережье острова, южнее Патонга и севернее пляжа Ката-Бич.
+    - question: Есть ли платные пляжи на пхукете?
+      hashtag: phuketplazhplatniy
+      ldjson: yes
+      answer: |
+	      Пхукете Пляж Freedom небольшой, длина около 300 метров. Разгуляться особо негде, но он наиболее протяженный, чем другие платные и труднодоступные пляжи Пхукета, типа Парадайз, Нуи, Банана, Ао Сен и Лаем Ка.
+    - question: Есть ли медузы на пхукете?
+      hashtag: phuketplazhmeduza
+      ldjson: yes
+      answer: | 
+	      Приезжающим отдохнуть в Таиланд следует знать, что понятия «сезон медуз» на Пхукете не существует. Морские создания появляются у берегов, как правило, после дождей и штормов.
+    - question: Как попасть на остров Джеймса Бонда на пхукете?
+      hashtag: phuketplazhbond
+      ldjson: yes
+      answer: | 
+	      Добраться до острова можно и самостоятельно арендовав деревянную лодку на пирсе Пханг Нга Бэй в заливе Пханг Нга за пределами Пхукета. Посмотрите другие экскурсии на острова с Пхукета и все наши экскурсии на Пхукете.
+- question: Рыбалка
+  hashtag:  ribalka
+  items:	  
+    - question: Какая есть рыбалка на пхукете.
+      hashtag: phuketribalka
+      ldjson: yes
+      answer: | 
+	      Морская рыбалка на Пхукете,Групповая экскурсия "Морская рыбалка на Пхукете".Индивидуальная морская рыбалка и аренда катера для рыбалки на Пхукете,Рыбалка на Пхукете самостоятельно с берега,Озерная пресноводная рыбалка на Пхукете.
+    - question: Разрешена ли рыбалка на пхукете с берега.
+      hashtag: phuketribalkabereg
+      ldjson: yes
+      answer: | 
+	      Ловля рыбы с берега на удочку на Пхукете разрешена, но запрещена на соседних островах у коралловых рифов и в морских национальных парках. Местные обычно ловят рыбу рано утром, вечером или ночью, популярные места: пирс Раваи, скалы у пляжа Януй, скалы справа от пляжа Сурин, пляж Майкао
